Align new-order UI with site palette, soften optional labels, add page title
- Replace amber/brown buttons and tan accents with site orange palette
- Use Tailwind primary scale (#fff7ed, #ffedd5) for backgrounds/borders
- Make (optional) labels smaller and lighter for less intimidating form
- Add 'Create new order' / 'طلب جديد' page title at top
- Add Create new order translation to ar.json and en.json

Made-with: Cursor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -122,6 +122,7 @@
     "Create account and continue": "إنشاء حساب والمتابعة",
     "Create your account": "إنشاء حسابك",
     "Create your new account": "أنشئ حسابك الجديد",
+    "Create new order": "طلب جديد",
     "Clicks": "النقرات",
     "Created": "تاريخ الإنشاء",
     "Creating account...": "جاري إنشاء الحساب...",
