--- a/lang/en.json
+++ b/lang/en.json
@@ -122,6 +122,7 @@
     "Create account and continue": "Create account and continue",
     "Create your account": "Create your account",
     "Create your new account": "Create your new account",
+    "Create new order": "Create new order",
     "Clicks": "Clicks",
     "Created": "Created",
     "Creating account...": "Creating account...",
