Order auto-reply: Filament settings, new Arabic format, clickable wa.me links
- Add Order Auto Reply section to Filament Settings (editable templates)
- Update auto_comment_with_price and auto_comment_no_price defaults (AR/EN)
- NewOrder uses Setting::get when set, else lang fallback
- linkify_whatsapp() helper: phone numbers → wa.me links in comments
- Fix DevOrdersSeeder to pass :whatsapp placeholder

Made-with: Cursor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -149,6 +149,7 @@
     "Edit": "تعديل",
     "Edit Window (minutes)": "نافذة التعديل (بالدقائق)",
     "Editor": "محرر",
+    "Staff": "موظف",
     "Email": "البريد الإلكتروني",
     "Email verified": "البريد موثق",
     "Email / SMTP": "البريد الإلكتروني / SMTP",
@@ -393,6 +394,12 @@
     "Order Form Fields": "حقول نموذج الطلب",
     "Order Number": "رقم الطلب",
     "Order Rules": "قواعد الطلبات",
+    "Order Auto Reply": "الرد التلقائي على الطلب",
+    "When prices entered": "عند إدخال الأسعار",
+    "When no prices entered": "عند عدم إدخال الأسعار",
+    "Order auto-reply posted as system comment after order creation. Leave empty to use default translations.": "الرد التلقائي يُنشر كتعليق نظام بعد إنشاء الطلب. اتركه فارغاً لاستخدام الترجمات الافتراضية.",
+    "Placeholders: :subtotal, :commission, :total, :site_name, :whatsapp. WhatsApp numbers become clickable wa.me links.": "المتغيرات: :subtotal, :commission, :total, :site_name, :whatsapp. أرقام الواتساب تصبح روابط wa.me قابلة للنقر.",
+    "Placeholders: :whatsapp": "المتغيرات: :whatsapp",
     "Max Files per Comment": "الحد الأقصى للملفات في التعليق",
     "Max number of files a user can attach to one comment. Default: 5.": "أقصى عدد من الملفات يمكن إرفاقها بتعليق واحد. الافتراضي: 5.",
     "Max Comment File Size (MB)": "الحد الأقصى لحجم ملف التعليق (ميجابايت)",
@@ -561,6 +568,25 @@
     "Shipping Companies": "شركات الشحن",
     "Shipping Company": "شركة الشحن",
     "Settings saved": "تم حفظ الإعدادات",
+    "settings.order_success_screen": "شاشة نجاح الطلب",
+    "settings.order_success_screen_desc": "تخصيص الرسالة المعروضة بعد إرسال العميل طلباً جديداً. اترك الحقول فارغة لاستخدام الترجمات الافتراضية.",
+    "settings.order_success_title_ar": "عنوان النجاح (عربي)",
+    "settings.order_success_title_en": "عنوان النجاح (إنجليزي)",
+    "settings.order_success_subtitle_ar": "العنوان الفرعي (عربي)",
+    "settings.order_success_subtitle_en": "العنوان الفرعي (إنجليزي)",
+    "settings.order_success_subtitle_help": "استخدم :number لرقم الطلب.",
+    "settings.order_success_message_ar": "رسالة النجاح (عربي)",
+    "settings.order_success_message_en": "رسالة النجاح (إنجليزي)",
+    "settings.order_success_go_to_order_ar": "نص الزر (عربي)",
+    "settings.order_success_go_to_order_en": "نص الزر (إنجليزي)",
+    "settings.order_success_redirect_prefix_ar": "بادئة العد التنازلي (عربي)",
+    "settings.order_success_redirect_prefix_en": "بادئة العد التنازلي (إنجليزي)",
+    "settings.order_success_redirect_suffix_ar": "لاحقة العد التنازلي (عربي)",
+    "settings.order_success_redirect_suffix_en": "لاحقة العد التنازلي (إنجليزي)",
+    "settings.order_success_redirect_seconds": "مدة العد التنازلي قبل التحويل (ثانية)",
+    "settings.order_success_redirect_seconds_help": "0 = تحويل فوري. ثوانٍ قبل التحويل التلقائي لصفحة الطلب.",
+    "settings.order_success_screen_threshold": "عرض الشاشة الكاملة لأول N طلبات لكل مستخدم",
+    "settings.order_success_screen_threshold_help": "0 = دائماً إشعار مختصر بدون شاشة كاملة. لكل مستخدم. الضيوف يشتركون في العدد.",
     "Shipped": "تم الشحن",
     "Shop from :store worldwide": "اشترِ من :store حول العالم",
     "Show": "إظهار",
@@ -1190,6 +1216,8 @@
     "opus46.modal_title": "تسجيل الدخول لإرسال الطلب",
     "opus46.modal_title_attach": "تسجيل الدخول لإرفاق الملف",
     "opus46.modal_subtitle_attach": "لن تفقد أي بيانات أدخلتها. سجّل الدخول لإرفاق الملف. إذا لم يكن لديك حساب، سننشئ واحداً باستخدام بريدك الإلكتروني.",
+    "opus46.modal_email_hint": "أدخل بريدك الإلكتروني أدناه — إذا لم يكن لديك حساب، سننشئ واحداً لك.",
+    "opus46.modal_enter_email": "أدخل بريدك الإلكتروني",
     "opus46.no_account": "لا يوجد حساب بهذا الايميل",
     "opus46.optional": "اختياري",
     "opus46.password_create_hint": "أدخل كلمة مرور لإنشاء حساب لك.",
@@ -1404,12 +1432,13 @@
     "orders.invoice_preview_only": "معاينة فقط",
     "orders.invoice_show_original_currency": "عرض أسعار المنتجات بالعملة الأصلية (مثل USD) بجانب الريال",
     "orders.invoice_fee_lines": "بنود الرسوم (عمولة، شحن، إلخ)",
-    "orders.fee_agent_fee": "عمولة الوكيل",
+    "orders.fee_agent_fee": "عمولة الوسيط",
     "orders.fee_local_shipping": "الشحن المحلي",
     "orders.fee_international_shipping": "الشحن الدولي",
     "orders.fee_photo_fee": "رسوم التصوير",
     "orders.fee_extra_packing": "التغليف الإضافي",
     "orders.invoice_generated": "تم إنشاء الفاتورة وإرفاقها بالتعليق",
+    "orders.invoice_generation_failed": "لم نتمكن من إنشاء الفاتورة. يرجى المحاولة مرة أخرى أو التواصل مع الدعم.",
     "orders.invoice_items": "تفاصيل المنتجات",
     "orders.invoice_line": "المنتج %d: %s × %.2f %s = %.2f ر.س",
     "orders.invoice_notes": "ملاحظات إضافية",
@@ -1453,6 +1482,14 @@
     "orders.invoice_show_order_items_help": "عند التفعيل، تظهر قائمة المنتجات تحت قيمة المنتجات في الفواتير النهائية.",
     "orders.invoice_custom_lines": "بنود مخصصة (الفاتورة النهائية)",
     "orders.invoice_custom_lines_help": "بنود إضافية (مثل خدمات مخصصة) تظهر في الفواتير النهائية. تفعيل/إخفاء لكل بند.",
+    "orders.invoice_override_commission": "تجاوز العمولة (للطلبات الصعبة)",
+    "orders.invoice_override_total": "تجاوز المبلغ الإجمالي",
+    "orders.invoice_other": "أخرى",
+    "orders.invoice_other_label_placeholder": "الوصف (مثال: رسوم إضافية)",
+    "orders.invoice_other_help": "اختياري. اتركه فارغاً لإخفائه من الفاتورة. يمكن كتابة وصف مختلف في كل مرة.",
+    "orders.invoice_first_payment_comment_template": "قالب تعليق الفاتورة الأولية",
+    "orders.invoice_first_payment_comment_template_help": "قالب التعليق المنشور مع فواتير الدفعة الأولى. المتغيرات: :subtotal, :commission, :total, :site_name, :whatsapp. اتركه فارغاً لاستخدام الافتراضي.",
+    "orders.invoice_first_payment_comment_default": "عزيزي العميل،\n\nشكرًا لطلبك معنا.\nالقيمة التقريبية لطلبك (الفاتورة الأولية: لا تشمل سعر الشحن الدولي والشحن الداخلي إن وجد):\n\nقيمة المنتج/ات: :subtotal ريال سعودي\n\nعمولة وسيط زون: :commission ريال سعودي\n\nالقيمة الإجمالية للمشتريات والعمولة: :total ريال سعودي\n\nسيتم البدء بشراء الطلب فعليًا عند استلام المبلغ أعلاه.\n\nملاحظات:\nالعمولة 8% للطلبات بقيمة 500 ريال فأكثر، أما إذا كان الطلب أقل من 500 ريال، فتكون العمولة ثابتة 50 ريال.\nسعر الشحن الدولي (الدفعة الثانية) هو 119 ريال لأول نصف كيلو، ثم 39 ريال لكل نصف كيلو إضافي.\n\nعند التحويل، يرجى إعلامنا بالمبلغ المحول عبر الرد في قسم التعليقات على طلبك أو إرسال رسالة على الواتساب: :whatsapp",
     "orders.invoice_costs": "التكاليف",
     "orders.description": "الوصف",
     "orders.amount": "المبلغ",
@@ -1520,8 +1557,8 @@
     "orders.size": "المقاس",
     "orders.status_changed_from": "تم تغيير الحالة من",
     "orders.status_updated": "تم تحديث حالة الطلب",
-    "orders.auto_comment_no_price": "شكراً لطلبك معنا!\n\nلم يتم إدخال أسعار المنتجات، سيتم حساب قيمة طلبك وإبلاغك بها في أقرب وقت عبر صفحة الطلب هذه.\n\nللاستفسار يرجى الرد في التعليقات أو التواصل عبر واتساب: :whatsapp",
-    "orders.auto_comment_with_price": "عزيزي العميل، شكراً لطلبك معنا!\n\nالقيمة التقريبية لطلبك (الفاتورة الأولية — لا تشمل سعر الشحن):\n\nقيمة المنتج/ات: :subtotal ريال سعودي\nعمولة :site_name: :commission ريال سعودي\nإجمالي سعر الشراء والعمولة: :total ريال سعودي\n\nسيتم البدء بالشراء فعلياً عند استلام التكلفة المذكورة.\n\nللتنويه: القيمة أعلاه محسوبة تلقائياً من النظام، سيتم إبلاغك في حال وجود أي اختلاف.\n\nللاستفسار يرجى الرد في التعليقات أو التواصل عبر واتساب: :whatsapp",
+    "orders.auto_comment_no_price": "شكراً لطلبك معنا!\n\nلم يتم إدخال أسعار المنتجات، سيتم حساب قيمة طلبك من الفريق والرد على صفحة طلبك خلال ساعات بقيمة المنتجات والعمولة ويصلك إيميل.\n\nللاستفسار يرجى الرد في تعليق على طلبك أو التواصل عبر واتساب: :whatsapp",
+    "orders.auto_comment_with_price": "عزيزي العميل،\n\nشكرًا لطلبك معنا.\nالقيمة التقريبية لطلبك (الفاتورة الأولية: لا تشمل سعر الشحن الدولي والشحن الداخلي إن وجد):\n\nقيمة المنتج/ات: :subtotal ريال سعودي\n\nعمولة وسيط زون: :commission ريال سعودي\n\nالقيمة الإجمالية للمشتريات والعمولة: :total ريال سعودي\n\nسيتم البدء بشراء الطلب فعليًا عند استلام المبلغ أعلاه.\n\nملاحظات:\nالعمولة 8% للطلبات بقيمة 500 ريال فأكثر، أما إذا كان الطلب أقل من 500 ريال، فتكون العمولة ثابتة 50 ريال.\nسعر الشحن الدولي (الدفعة الثانية) هو 119 ريال لأول نصف كيلو، ثم 39 ريال لكل نصف كيلو إضافي.\n\nعند التحويل، يرجى إعلامنا بالمبلغ المحول عبر:\nالرد في قسم التعليقات على طلبك\nأو إرسال رسالة على الواتساب: :whatsapp\n\nبيانات التحويل:\nبنك الراجحي\nالاسم: مؤسسة جسور الاستيراد للتجارة\nرقم الحساب: 624608010055610\nرقم الآيبان: SA4180000624608010055610\n\nللحسابات الأخرى، يرجى زيارة صفحة الحسابات البنكية:\nhttps://wasetzon.com/payment-methods/\n\nبمجرد بدء الطلب معنا، يعتبر ذلك موافقة منك على جميع الشروط والأحكام:\nhttps://wasetzon.com/terms-and-conditions/\n\nالأسئلة الشائعة:\nhttps://wasetzon.com/faq/\n\nأسعار الشحن:\nhttps://wasetzon.com/shipping-calculator/\n\nمدة وصول الطلب: تعتمد على سرعة وصول المنتجات لمقرنا واجتيازها الجمارك، وتتراوح عادةً بين 15-30 يوم عمل تقريبًا من تاريخ التحويل.\n\nتنويه: القيمة التقريبية المذكورة محسوبة تلقائيًا من النظام، وسيقوم فريقنا بإبلاغك في حال وجود أي ملاحظات أو اختلاف كبير في قيمة الطلب.\n\nنتمنى لك تجربة تسوق ممتعة!",
     "orders.system_comment_label": "رسالة تلقائية",
     "orders.subtotal": "المجموع الفرعي",
     "orders.team_members": "من الفريق",
@@ -1882,7 +1919,7 @@
     "translations.error_invalid_key": "المفتاح يمكن أن يحتوي فقط على أحرف وأرقام ونقاط وشرطات سفلية وشرطات",
     "dev.badge": "تطوير",
     "dev.customer": "عميل",
-    "dev.editor": "محرر",
+    "dev.staff": "موظف",
     "dev.admin": "مدير",
     "dev.super_admin": "مدير عام",
     "dev.logout": "تسجيل الخروج",
