--- a/lang/en.json
+++ b/lang/en.json
@@ -149,6 +149,7 @@
     "Edit": "Edit",
     "Edit Window (minutes)": "Edit Window (minutes)",
     "Editor": "Editor",
+    "Staff": "Staff",
     "Email": "Email",
     "Email verified": "Email verified",
     "Email / SMTP": "Email / SMTP",
@@ -393,6 +394,12 @@
     "Order Form Fields": "Order Form Fields",
     "Order Number": "Order Number",
     "Order Rules": "Order Rules",
+    "Order Auto Reply": "Order Auto Reply",
+    "When prices entered": "When prices entered",
+    "When no prices entered": "When no prices entered",
+    "Order auto-reply posted as system comment after order creation. Leave empty to use default translations.": "Order auto-reply posted as system comment after order creation. Leave empty to use default translations.",
+    "Placeholders: :subtotal, :commission, :total, :site_name, :whatsapp. WhatsApp numbers become clickable wa.me links.": "Placeholders: :subtotal, :commission, :total, :site_name, :whatsapp. WhatsApp numbers become clickable wa.me links.",
+    "Placeholders: :whatsapp": "Placeholders: :whatsapp",
     "Max Files per Comment": "Max Files per Comment",
     "Max number of files a user can attach to one comment. Default: 5.": "Max number of files a user can attach to one comment. Default: 5.",
     "Max Comment File Size (MB)": "Max Comment File Size (MB)",
@@ -561,6 +568,25 @@
     "Shipping Companies": "Shipping Companies",
     "Shipping Company": "Shipping Company",
     "Settings saved": "Settings saved",
+    "settings.order_success_screen": "Order Success Screen",
+    "settings.order_success_screen_desc": "Customize the message shown after a customer submits a new order. Leave fields empty to use default translations.",
+    "settings.order_success_title_ar": "Success Title (Arabic)",
+    "settings.order_success_title_en": "Success Title (English)",
+    "settings.order_success_subtitle_ar": "Success Subtitle (Arabic)",
+    "settings.order_success_subtitle_en": "Success Subtitle (English)",
+    "settings.order_success_subtitle_help": "Use :number for the order number.",
+    "settings.order_success_message_ar": "Success Message (Arabic)",
+    "settings.order_success_message_en": "Success Message (English)",
+    "settings.order_success_go_to_order_ar": "Button Label (Arabic)",
+    "settings.order_success_go_to_order_en": "Button Label (English)",
+    "settings.order_success_redirect_prefix_ar": "Countdown Prefix (Arabic)",
+    "settings.order_success_redirect_prefix_en": "Countdown Prefix (English)",
+    "settings.order_success_redirect_suffix_ar": "Countdown Suffix (Arabic)",
+    "settings.order_success_redirect_suffix_en": "Countdown Suffix (English)",
+    "settings.order_success_redirect_seconds": "Redirect Countdown (seconds)",
+    "settings.order_success_redirect_seconds_help": "0 = immediate redirect. Seconds before auto-redirect to order page.",
+    "settings.order_success_screen_threshold": "Show full screen for first N orders per user",
+    "settings.order_success_screen_threshold_help": "0 = always toast, never full screen. Per user. Guests share one count.",
     "Shipped": "Shipped",
     "Shop from :store worldwide": "Shop from :store worldwide",
     "Show": "Show",
@@ -1180,7 +1206,7 @@
     "opus46.lbl_currency": "Currency",
     "opus46.lbl_notes": "Notes",
     "opus46.lbl_price": "Price",
-    "opus46.lbl_qty": "Quantity",
+    "opus46.lbl_qty": "Qty",
     "opus46.lbl_size": "Size",
     "opus46.lbl_url": "Product URL",
     "opus46.login_to_upload": "Please log in to attach files",
@@ -1190,6 +1216,8 @@
     "opus46.modal_title": "Log in to Submit Order",
     "opus46.modal_title_attach": "Sign in to attach file",
     "opus46.modal_subtitle_attach": "You will not lose any data you entered. Sign in to attach a file. If you don't have an account, we'll create one using your email.",
+    "opus46.modal_email_hint": "Enter your email below — if you don't have an account, we'll create one for you.",
+    "opus46.modal_enter_email": "Enter your email",
     "opus46.no_account": "No account with this email",
     "opus46.optional": "optional",
     "opus46.password_create_hint": "Enter a password to create your account.",
@@ -1404,12 +1432,13 @@
     "orders.invoice_preview_only": "Preview only",
     "orders.invoice_show_original_currency": "Show item prices in original currency (e.g. USD) alongside SAR",
     "orders.invoice_fee_lines": "Fee lines (Agent fee, Shipping, etc.)",
-    "orders.fee_agent_fee": "Agent Fee",
+    "orders.fee_agent_fee": "Broker Fee",
     "orders.fee_local_shipping": "Local Shipping",
     "orders.fee_international_shipping": "International Shipping",
     "orders.fee_photo_fee": "Photo Fee",
     "orders.fee_extra_packing": "Extra Packing",
     "orders.invoice_generated": "Invoice generated and attached to comment",
+    "orders.invoice_generation_failed": "We couldn't generate the invoice. Please try again or contact support.",
     "orders.invoice_items": "Items",
     "orders.invoice_line": "Item %d: %s × %.2f %s = %.2f SAR",
     "orders.invoice_notes": "Additional Notes",
@@ -1453,6 +1482,14 @@
     "orders.invoice_show_order_items_help": "When ON, itemized product list appears under Product value in final invoices.",
     "orders.invoice_custom_lines": "Custom lines (Final invoice)",
     "orders.invoice_custom_lines_help": "Extra lines (e.g. custom services) shown on final invoices. Toggle visibility per line.",
+    "orders.invoice_override_commission": "Override commission (for difficult orders)",
+    "orders.invoice_override_total": "Override total amount",
+    "orders.invoice_other": "Other",
+    "orders.invoice_other_label_placeholder": "Description (e.g. extra fees)",
+    "orders.invoice_other_help": "Optional. Leave empty to hide from invoice. You can write a different description each time.",
+    "orders.invoice_first_payment_comment_template": "First Payment comment template",
+    "orders.invoice_first_payment_comment_template_help": "Template for the comment posted with First Payment invoices. Placeholders: :subtotal, :commission, :total, :site_name, :whatsapp. Leave empty to use default.",
+    "orders.invoice_first_payment_comment_default": "Dear customer,\n\nThank you for your order.\nEstimated order value (initial invoice — excludes international and domestic shipping if applicable):\n\nProducts value: :subtotal SAR\n\n:site_name commission: :commission SAR\n\nTotal (purchase + commission): :total SAR\n\nPurchasing will begin once the above amount is received.\n\nNote: The above value is calculated automatically by the system. Our team will notify you if there are any notes or significant discrepancies.\n\nFor enquiries, please reply in the comments or contact us via WhatsApp: :whatsapp",
     "orders.invoice_costs": "Costs",
     "orders.description": "Description",
     "orders.amount": "Amount",
@@ -1520,8 +1557,8 @@
     "orders.size": "Size",
     "orders.status_changed_from": "Status changed from",
     "orders.status_updated": "Status updated",
-    "orders.auto_comment_no_price": "Thank you for your order!\n\nNo product prices were entered. Our team will calculate the order value and notify you here on this page as soon as possible.\n\nFor enquiries, please reply in the comments or contact us via WhatsApp: :whatsapp",
-    "orders.auto_comment_with_price": "Dear customer, thank you for your order!\n\nEstimated order value (initial invoice — excludes shipping):\n\nProducts value: :subtotal SAR\n:site_name commission: :commission SAR\nTotal (purchase + commission): :total SAR\n\nPurchasing will begin once the amount is received.\n\nNote: The above value is calculated automatically by the system. You will be notified if there is any discrepancy.\n\nFor enquiries, please reply in the comments or contact us via WhatsApp: :whatsapp",
+    "orders.auto_comment_no_price": "Thank you for your order!\n\nNo product prices were entered. Our team will calculate the order value and reply on your order page within hours with the product and commission amounts, and you will receive an email.\n\nFor enquiries, please reply in a comment on your order or contact us via WhatsApp: :whatsapp",
+    "orders.auto_comment_with_price": "Dear customer,\n\nThank you for your order.\nEstimated order value (initial invoice — excludes international and domestic shipping if applicable):\n\nProducts value: :subtotal SAR\n\n:site_name commission: :commission SAR\n\nTotal (purchase + commission): :total SAR\n\nPurchasing will begin once the above amount is received.\n\nNote: The above value is calculated automatically by the system. Our team will notify you if there are any notes or significant discrepancies.\n\nFor enquiries, please reply in the comments or contact us via WhatsApp: :whatsapp",
     "orders.system_comment_label": "Automated message",
     "orders.subtotal": "Subtotal",
     "orders.team_members": "team member(s)",
@@ -1886,7 +1923,7 @@
     "translations.error_invalid_key": "Key can only contain letters, numbers, dots, underscores, and hyphens",
     "dev.badge": "DEV",
     "dev.customer": "Customer",
-    "dev.editor": "Editor",
+    "dev.staff": "Staff",
     "dev.admin": "Admin",
     "dev.super_admin": "Super Admin",
     "dev.logout": "Logout",
