Misc updates: WpCompatUserProvider, DevController, OrderController, helpers, lang, views, routes, middleware, tests
Made-with: Cursor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1409,6 +1409,7 @@
     "orders.email_queued": "تم وضع البريد الإلكتروني في قائمة الإرسال بنجاح.",
     "orders.execute_merge": "تنفيذ الدمج",
     "orders.file_uploaded": "تم رفع الملف",
+    "orders.files_uploaded": "تم رفع :count ملف",
     "orders.files": "الملفات",
     "orders.filters": "الفلاتر",
     "orders.final": "النهائي",
@@ -1579,6 +1580,7 @@
     "orders.upload": "رفع",
     "orders.upload_file": "رفع ملف",
     "orders.view": "فتح",
+    "orders.view_disabled_unsafe": "الرابط غير آمن للفتح",
     "orders.view_merged_order": "عرض الطلب المدمج",
     "orders.write_comment": "اكتب تعليقاً...",
     "payment.account_details_soon": "تفاصيل الحساب ستتوفر قريباً. للتحويل عبر هذا البنك يرجى التواصل معنا مباشرة.",
@@ -1785,6 +1787,7 @@
     "orders.payment_method_cash": "نقداً",
     "orders.payment_method_other": "أخرى",
     "orders.payment_receipt_file": "إيصال الدفع",
+    "orders.max_5_files": "حد أقصى 5 ملفات",
     "orders.view_receipt": "عرض الإيصال",
     "orders.save_payment": "حفظ معلومات الدفع",
     "orders.payment_updated": "تم حفظ معلومات الدفع",
