--- a/lang/en.json
+++ b/lang/en.json
@@ -1409,6 +1409,7 @@
     "orders.email_queued": "Email has been queued for delivery.",
     "orders.execute_merge": "Execute Merge",
     "orders.file_uploaded": "File uploaded",
+    "orders.files_uploaded": ":count files uploaded",
     "orders.files": "Files",
     "orders.filters": "Filters",
     "orders.final": "Final",
@@ -1579,6 +1580,7 @@
     "orders.upload": "Upload",
     "orders.upload_file": "Upload File",
     "orders.view": "View",
+    "orders.view_disabled_unsafe": "Link not safe to open",
     "orders.view_merged_order": "View merged order",
     "orders.write_comment": "Write a comment…",
     "payment.account_details_soon": "Account details will be available soon. To transfer via this bank, please contact us directly.",
@@ -1785,6 +1787,7 @@
     "orders.payment_method_cash": "Cash",
     "orders.payment_method_other": "Other",
     "orders.payment_receipt_file": "Payment Receipt",
+    "orders.max_5_files": "max 5 files",
     "orders.view_receipt": "View Receipt",
     "orders.save_payment": "Save Payment Info",
     "orders.payment_updated": "Payment information saved",
